# Sanser

./: .env  .gitignore  README.md  package-lock.json  package.json  server.js
desktop/: input-worker-win.ps1  main.js  preload.js
native-captures/: capture_h264.snv
native/client-mac/: CMakeLists.txt  README.md
native/client-mac/src/: main.mm
native/host-win/: CMakeLists.txt  README.md
native/host-win/src/: bmp_writer.cpp  bmp_writer.h  desktop_duplication.cpp  desktop_duplication.h  main.cpp  mf_video_encoder.cpp  mf_video_encoder.h  mf_video_packet_encoder.cpp  mf_video_packet_encoder.h
public/: app.js  index 2.html  index.html  styles 2.css  styles.css
scripts/: inspect-snv.js  install-tailscale.js  run-cmake.js
turn/: README.md  docker-compose.yml  turnserver.conf  turnserver.conf.example
